--- a/popup.css
+++ b/popup.css
@@ -13,13 +13,14 @@ body {
   
 .page {
   position: absolute;
-  width: calc(100% - 40px);
+  width: calc(100% - 10px);
   opacity: 1; border-radius: 10px;
   transition: opacity 0.3s ease-in-out;
-  display: flex;
+  display: flex; padding: 20px;
   flex-direction: column;
   align-items: center;
   text-align: center;
+
 }
 
 .hidden {
