--- a/popup.css
+++ b/popup.css
@@ -6,7 +6,7 @@ body {
     padding: 20px;
     width: 320px;
     height: auto;
-    min-height: fit-content; padding-bottom: 20px;
+    min-height: 300px; padding-bottom: 20px;
     overflow: hidden;
     border-radius: 15px; /* Rounded corners */
   }
