--- a/popup.css
+++ b/popup.css
@@ -5,14 +5,14 @@ body {
     margin: 0;
     padding: 20px;
     width: 320px;
-    height: auto;
+    height: auto;  min-width: fit-content;
     min-height: 300px; padding-bottom: 20px;
     overflow: hidden;
     border-radius: 15px; /* Rounded corners */
   }
   
 .page {
-  position: absolute; min-width: fit-content;
+  position: absolute;
   width: calc(100% - 10px);
   opacity: 1; border-radius: 10px;
   transition: opacity 0.3s ease-in-out;
