--- a/popup.css
+++ b/popup.css
@@ -7,7 +7,7 @@ body {
     width: 320px;
     height: fit-content;
     min-width: fit-content;
-    max-height: 500px;
+    /* max-height: 500px; */
     padding-bottom: 20px;
     overflow-x: hidden;
     overflow-y: auto;
