--- a/popup.css
+++ b/popup.css
@@ -7,7 +7,7 @@ body {
     width: 320px;
     height: fit-content;
     min-width: fit-content;
-    /* max-height: 500px; */
+    max-height: 300px;
     padding-bottom: 20px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -33,17 +33,17 @@ body {
   pointer-events: none;
 }
 
-@keyframes back-color{
-  0% {
-    background: linear-gradient(135deg, #2a5298, #cdd7e7);
+@keyframes coloring{
+  0%, 25% {
+    color: linear-gradient(135deg, #2a5298, #cdd7e7);
   }
-  100% {
-    background: linear-gradient(135deg, #cdd7e7, #2a5298);
+  50%, 100% {
+    color: linear-gradient(135deg, #cdd7e7, #2a5298);
   }
 }
 
 h1 {
-  font-size: 1.5rem; animation: back-color 2s infinite;
+  font-size: 1.5rem; animation: coloring 2s infinite;
   margin-bottom: 20px;
 }
 
