--- a/popup.css
+++ b/popup.css
@@ -10,7 +10,7 @@ body {
     max-height: 300px;
     padding-bottom: 20px;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     border-radius: 15px;
 }
 
