--- a/popup.css
+++ b/popup.css
@@ -5,9 +5,8 @@ body {
     margin: 0;
     padding: 20px;
     width: 320px;
-    height: fit-content;
     min-width: fit-content;
-    max-height: 300px;
+    height: 300px;
     padding-bottom: 20px;
     overflow-x: hidden;
     overflow-y: hidden;
