--- a/popup.css
+++ b/popup.css
@@ -6,14 +6,13 @@ body {
     padding: 20px;
     width: 320px;
     min-width: fit-content;
-    height: 200px;
     padding-bottom: 10px;
 }
 
 .page {
     position: relative;
     width: calc(100% - 40px);
-    opacity: 1;
+    opacity: 1; height: 200px;
     border-radius: 10px;
     transition: opacity 0.3s ease-in-out;
     display: flex;
