--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    background: linear-gradient(135deg, #1e3c72, #1e3b7260,  #2a5298);
     color: #fff;
     margin: 0;
     padding: 20px;
