--- a/popup.css
+++ b/popup.css
@@ -1,22 +1,22 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #1e3c72, #1e3b7260,  #2a5298);
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
     color: #fff;
     margin: 0;
     padding: 20px;
     width: 320px;
     min-width: fit-content;
-    padding-bottom: 10px;
+
 }
 
 .page {
     position: relative;
     width: calc(100% - 40px);
-    opacity: 1; height: 200px;
+    opacity: 1; height: fit-content;
     border-radius: 10px;
     transition: opacity 0.3s ease-in-out;
     display: flex;
-    padding: 10px;
+    padding: 10px; padding-bottom: 10px;
     flex-direction: column;
     align-items: center;
     text-align: center;
