--- a/popup.css
+++ b/popup.css
@@ -3,7 +3,8 @@ body {
     background: linear-gradient(135deg, #1e3c72, #2a5298);
     color: #fff;
     margin: 0;
-    padding: 20px;
+    padding: 20px; overflow-x: hidden;
+    overflow-y: hidden;
     width: 320px;
     min-width: fit-content;
 
@@ -22,8 +23,7 @@ body {
     text-align: center;
     margin-bottom: 10px;
     border-radius: 15px;
-    overflow-x: hidden;
-    overflow-y: hidden;
+
 }
 
 .hidden {
@@ -41,7 +41,7 @@ body {
 }
 
 h1 {
-  font-size: 1.5rem; animation: coloring 2s infinite;
+  font-size: 1.5rem; animation: coloring 10s infinite;
   margin-bottom: 20px;
 }
 
