--- a/popup.css
+++ b/popup.css
@@ -187,3 +187,25 @@ iframe {
   border: none;
   background: rgba(255, 255, 255, 0.05);
 }
+
+footer {
+    font-size: 0.8rem;
+    color: black;
+    text-align: center;
+    padding: 5px 10px;
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 20px);
+}
+
+footer p {
+    margin: 0;
+    line-height: 1.3;
+}
+
+footer .description {
+    font-size: 0.7rem;
+    margin-top: 3px;
+    color:black;
+    font-style: italic;
+}
