--- a/popup.css
+++ b/popup.css
@@ -194,7 +194,7 @@ footer {
     text-align: center;
     padding: 5px 10px;
     position: absolute;
-    bottom: 0; text-align: center;
+    bottom: 0; 
     width: calc(100% - 20px);
 }
 
@@ -202,6 +202,7 @@ footer p {
     margin: 0;
     line-height: 1.4;
     font-family: Arial;
+    text-align: center;
 }
 
 footer .description {
@@ -209,4 +210,5 @@ footer .description {
     margin-top: 3px;
     color:black;
     font-style: italic;
+    text-align: center;
 }
