--- a/popup.css
+++ b/popup.css
@@ -189,7 +189,7 @@ iframe {
 }
 
 footer {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     color: black; 
     text-align: center;
     padding: 5px 10px;
@@ -206,9 +206,24 @@ footer p {
 }
 
 footer .description {
-    font-size: 0.7rem;
+    font-size: 0.5rem;
     margin-top: 3px;
     color:black;
     font-style: italic;
     text-align: center;
+}
+.resumer {
+  background-color: #ff8e3a;
+  color: white;
+  font-size: 0.5rem; margin-top: 50px;
+  font-weight: 400;
+  border: none; text-align: center;
+  border-radius: 15px;
+  cursor: pointer; margin-top: 40px;
+  transition: all 1s;
+}
+
+.resumer:hover {
+  background-color: #ed509e;
+  transform: scale(1.05);
 }
