--- a/popup.css
+++ b/popup.css
@@ -17,7 +17,7 @@ body {
     border-radius: 10px;
     transition: opacity 0.3s ease-in-out;
     display: flex;
-    padding: 10px; padding-bottom: 10px;
+    padding: 10px;
     flex-direction: column;
     align-items: center;
     text-align: center;
