--- a/popup.css
+++ b/popup.css
@@ -13,11 +13,11 @@ body {
 .page {
     position: relative;
     width: calc(100% - 40px);
-    opacity: 1; height: 100%;
+    opacity: 1; height: fit-content;
     border-radius: 10px;
     transition: opacity 0.3s ease-in-out;
     display: flex;
-    padding: 10px;
+    padding: 10px; overflow: hidden;
     flex-direction: column;
     align-items: center;
     text-align: center;
