--- a/popup.css
+++ b/popup.css
@@ -4,22 +4,25 @@ body {
     color: #fff;
     margin: 0;
     padding: 20px;
-    overflow: hidden;
     width: 320px;
     min-width: fit-content;
+    height: auto;
+    min-height: fit-content;
+    box-sizing: border-box;
 }
 
 .page {
     position: relative;
     width: calc(100% - 40px);
-    opacity: 1; height: fit-content;
+    opacity: 1;
+    height: auto;
     transition: opacity 0.3s ease-in-out;
     display: flex;
     padding: 10px;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     border-radius: 15px;
 }
 
@@ -28,23 +31,9 @@ body {
   pointer-events: none;
 }
 
-@keyframes coloring{
-  0%, 50% {
-    background: linear-gradient(135deg, #2a5298, #cdd7e7);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-  50%, 100% {
-    background: linear-gradient(135deg, #cdd7e7, #2a5298);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-  }
-}
 
 h1 {
-  font-size: 1.5rem; animation: coloring 10s infinite;
+  font-size: 1.5rem; color: linear-gradient(135deg, #2a5298, #cdd7e7);
   margin-bottom: 20px;
 }
 
@@ -171,7 +160,7 @@ button:hover {
 }
 
 .game-container {
-  margin-top: 10px;
+  margin-top: 5px;
   width: 100%;
   height: 250px;
   border-radius: 10px;
