--- a/popup.css
+++ b/popup.css
@@ -1,29 +1,35 @@
+body::-webkit-scrollbar {
+  display: none;
+}
+
 body {
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #1e3c72, #2a5298);
-    color: #fff;
-    margin: 0;
-    padding: 20px;
-    width: 320px;
-    min-width: fit-content;
-    height: auto;
-    min-height: fit-content;
-    box-sizing: border-box;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  font-family: 'Arial', sans-serif;
+  background: linear-gradient(135deg, #1e3c72, #2a5298);
+  color: #fff;
+  margin: 0;
+  padding: 20px;
+  width: 320px;
+  min-width: fit-content;
+  height: auto;
+  min-height: fit-content;
+  box-sizing: border-box;
 }
 
 .page {
-    position: relative;
-    width: calc(100% - 40px);
-    opacity: 1;
-    height: auto;
-    transition: opacity 0.3s ease-in-out;
-    display: flex;
-    padding: 10px;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 0;
-    border-radius: 15px;
+  position: relative;
+  width: calc(100% - 40px);
+  opacity: 1;
+  height: auto;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 0;
+  border-radius: 15px;
 }
 
 .hidden {
@@ -31,12 +37,10 @@ body {
   pointer-events: none;
 }
 
-
 h1 {
   font-size: 1.5rem; color: linear-gradient(135deg, #2a5298, #cdd7e7);
   margin-bottom: 20px;
 }
-
 
 .input-group {
   margin-bottom: 15px;
@@ -174,8 +178,14 @@ button:hover {
 }
 
 iframe {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
   width: 100%;
   height: 100%;
   border: none;
   background: rgba(255, 255, 255, 0.05);
+}
+
+iframe::-webkit-scrollbar {
+  display: none;
 }
